Lab-1 basic framework.

--- a/Lab-1/Lab-1-激光与铷蒸汽的相互作用.tex
+++ b/Lab-1/Lab-1-激光与铷蒸汽的相互作用.tex
@@ -83,6 +83,10 @@
 
 \subsection{利用Mach-Zehnder干涉仪验证折射率的Kramers-Kronig关系}
 
+\subsubsection{实验设定}
+
+\subsubsection{结果与分析}
+
 \section{结论}
 
 \section{反思}
